fixing layout shifts

--- a/project/styles/main.css
+++ b/project/styles/main.css
@@ -121,7 +121,6 @@ nav a:hover {
 
 main {
     margin: 1rem auto;
-    width: 900px;
 }
 
 .main-boxes{
